# diffvg

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
cmake/: pybind11.cmake  thrust.cmake
pydiffvg/: __init__.py
